--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="../public/styles/index.css">
+    <!-- BOOTSTRAP CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- CUSTOM JS -->
-    <script src="../public/scripts/index.js"></script>
+    <script defer src="../public/scripts/index.js"></script>
     <title>Release Pro</title>
 </head>
 <body>
-    <h1>Release Pro</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Release Pro</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
+        </div>
+    </nav>
+
+    <div class="box1">
+        <div class="container text-center">
+            <div class="row text-center pt-5">
+                <h2 class="col-sm-12 title">Why Release Pro?</h2>
+            </div>
+            <button type="button" class="btn btn-primary mt-5 join-btn">Sign Up Now</button>
+        </div>
+    </div>
+    <div class="box2">
+        <div class="container">
+            <div class="row ml-0">
+                <div class="col-sm-2 col-md-1"></div>
+                <div class="col-sm-8 col-md-10 text-center">
+                    <h2 class="pb-3">One Stop Shop For Your Release Process</h2>
+                    <p>The key to more success is to have a lot of pillows. The key to success is to keep your head above the water, never give up. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender. Congratulations, you played yourself. Always remember in the jungle there’s a lot of they in there, after you overcome they, you will make it to paradise. They don’t want us to eat. Life is what you make it, so let’s make it. In life there will be road blocks but we will over come it. Surround yourself with angels, positive energy, beautiful people, beautiful souls, clean heart, angel.</p>
+                </div>
+                <div class="col-sm-2 col-md-1"></div>
+            </div>
+        </div>
+    </div>
+    <div class="box3">
+        <div class="container m-0">
+            <div class="row">
+                <div class="col-sm-6 content">
+                    <h3>Keep Track of iOS and Android</h3>
+                    <p>Let’s see what Chef Dee got that they don’t want us to eat. It’s on you how you want to live your life. Everyone has a choice. I pick my choice, squeaky clean. They don’t want us to eat. A major key, never panic. Don’t panic, when it gets crazy and rough, don’t panic, stay calm. A major key, never panic. Don’t panic, when it gets crazy and rough, don’t panic, stay calm.</p>
+                </div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+            </div>
+        </div>
+    </div>
+    <div class="box4">
+        <div class="container mr-0">
+            <div class="row">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6 content">
+                    <h3>Keep a Historical Record of Your Releases</h3>
+                    <p>They never said winning was easy. Some people can’t handle success, I can. How’s business? Boomin. Always remember in the jungle there’s a lot of they in there, after you overcome they, you will make it to paradise. Watch your back, but more importantly when you get out the shower, dry your back, it’s a cold world out there. The weather is amazing, walk with me through the pathway of more success. Take this journey with me, Lion!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="box5">
+        <div class="container m-0">
+            <div class="row">
+                <div class="col-sm-6 content">
+                <h3>Know Which Team Owns Which Feature</h3>
+                    <p>They don’t want us to win. Bless up. Celebrate success right, the only way, apple. Let me be clear, you have to make it through the jungle to make it to paradise, that’s the key, Lion! You see the hedges, how I got it shaped up? It’s important to shape up your hedges, it’s like getting a haircut, stay fresh. We don’t see them, we will never see them. The weather is amazing, walk with me through the pathway of more success. Take this journey with me, Lion! Another one.</p>
+                </div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- BOOTSTRAP JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
