--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../public/styles/index.css">
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- CUSTOM JS -->
     <script defer src="../public/scripts/index.js"></script>
     <title>Release Pro</title>
@@ -24,7 +27,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
+            <button  type="button" class="btn btn-outline-success my-2 my-sm-0" id="login-btn">Log in</button>
         </div>
     </nav>
 
@@ -33,7 +36,11 @@
             <div class="row text-center pt-5">
                 <h2 class="col-sm-12 title">Why Release Pro?</h2>
             </div>
-            <button type="button" class="btn btn-primary mt-5 join-btn">Sign Up Now</button>
+            <button type="button" class="btn btn-primary mt-5 join-btn" id="signup-btn">Sign Up Now</button>
+        </div>
+        <div class="container">
+            <i class="fas fa-mobile-alt"></i>
+            <i class="fas fa-desktop"></i>
         </div>
     </div>
     <div class="box2">
