--- a/public/styles/release.css
+++ b/public/styles/release.css
@@ -7,6 +7,7 @@
     outline: 0;
 }
 
+/* -------- Navbar Styling -------- */
 #profile-btn {
     color: #796eff;
     background-color: none;
@@ -15,6 +16,7 @@
     cursor: pointer;
 }
 
+/* -------- Body Styling -------- */
 .box1 {
     padding-top: 35px;
     background-color: #f8f9fa;
