--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,9 @@
                         <div class="modal-footer d-flex justify-content-center">
                             <button class="btn btn-default">Login</button>
                         </div>
+                        <div class="signup">
+                            <p>Don't have an account? Sign up</p>
+                        </div>
                     </div>
                 </div>
             </div>
