--- a/views/release.html
+++ b/views/release.html
@@ -12,7 +12,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- CUSTOM JS -->
     <script defer src="../public/scripts/release.js"></script>
-    <title>Release Pro</title>
+    <title>Release Pro: Release</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
