--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="../public/styles/index.css">
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="../public/styles/index.css">
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -42,11 +42,11 @@
                         </div>
                         <div class="modal-body mx-3">
                             <div class="md-form mb-5">
-                                <input type="email" id="defaultForm-email" class="form-control validate">
+                                <input type="email" id="defaultForm-email" class="form-control">
                                 <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
                             </div>
                             <div class="md-form mb-4">
-                                <input type="password" id="defaultForm-pass" class="form-control validate">
+                                <input type="password" id="defaultForm-pass" class="form-control">
                                 <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
                             </div>
                         </div>
