--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -22,6 +22,11 @@
     justify-content: center;
 }
 
+.form-control:focus {
+    border-color: #796eff;
+    box-shadow: 0 0 0 0.1rem #796eff;
+}
+
 /* -------- Body Styling -------- */
 h1 {
     font-family: 'PT Sans', sans-serif;
