--- a/views/release.html
+++ b/views/release.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="../public/styles/release.css">
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="../public/styles/release.css">
     <!-- CUSTOM JS -->
     <script defer src="../public/scripts/release.js"></script>
     <title>Release Pro: Release</title>
@@ -27,7 +24,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <button  type="button" class="btn btn-outline-success my-2 my-sm-0" id="profile-btn">Profile</button>
+            <button type="button" class="btn btn-outline-success my-2 my-sm-0" id="profile-btn">Profile</button>
         </div>
     </nav>
 
@@ -45,6 +42,9 @@
                 <li class="nav-item third-tab">
                     <a class="nav-link" id="pills-calendar-tab" data-toggle="pill" href="#pills-calendar" role="tab"
                         aria-controls="pills-calendar" aria-selected="false">Calendar</a>
+                </li>
+                <li>
+                    <button class="release-btn" id="release-btn" type="button" class="btn my-2 my-sm-0">Add New Release</button>
                 </li>
             </ul>
         </div>
