adds handsontable install, creates owner spreadsheet, and updates styles for release and index

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -32,6 +32,11 @@ h1 {
     font-family: 'PT Sans', sans-serif;
 }
 
+.why {
+    margin: 3vh 3vw;
+    padding: 30px;
+}
+
 #signup-btn {
     color: #ffffff;
     background-color: #796eff;
