--- a/views/index.html
+++ b/views/index.html
@@ -67,6 +67,9 @@
             <div class="row text-center pt-5">
                 <h2 class="col-sm-12 title">Why Release Pro?</h2>
             </div>
+            <div class="why">
+                <p>Release Pro helps Engineering teams keep track of their releases throughout the release process. The more information a team member can see about the release, the better a release can be for your users.</p>
+            </div>
             <button type="button" class="btn btn-primary mt-5 join-btn" id="signup-btn">Sign Up Now</button>
         </div>
         <div class="container">
