updates release and index

--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
                 <div class="col-sm-2 col-md-1"></div>
                 <div class="col-sm-8 col-md-10 text-center">
                     <h2 class="pb-3">One Stop Shop For Your Release Process</h2>
-                    <p>The key to more success is to have a lot of pillows. The key to success is to keep your head above the water, never give up. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender. Congratulations, you played yourself. Always remember in the jungle there’s a lot of they in there, after you overcome they, you will make it to paradise. They don’t want us to eat. Life is what you make it, so let’s make it. In life there will be road blocks but we will over come it. Surround yourself with angels, positive energy, beautiful people, beautiful souls, clean heart, angel.</p>
+                    <p>You no longer have to hit up all the different slack channels or other team members to get up to date information on current releases or any previous release. You'll be able to clearly view what went into a release. Knowing what went into a release and when it was released will help the productivity of any engineering team.</p>
                 </div>
                 <div class="col-sm-2 col-md-1"></div>
             </div>
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-sm-6 content">
                     <h3>Keep Track of iOS and Android</h3>
-                    <p>Let’s see what Chef Dee got that they don’t want us to eat. It’s on you how you want to live your life. Everyone has a choice. I pick my choice, squeaky clean. They don’t want us to eat. A major key, never panic. Don’t panic, when it gets crazy and rough, don’t panic, stay calm. A major key, never panic. Don’t panic, when it gets crazy and rough, don’t panic, stay calm.</p>
+                    <p>Releases processes for iOS and Android are completely different. The way you track them shouldn't be. Whether you submit a release candidate to the App Store or Google Play Store you can rest assure that you'll know everything there is to your release.</p>
                 </div>
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3"></div>
@@ -108,7 +108,7 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6 content">
                     <h3>Keep a Historical Record of Your Releases</h3>
-                    <p>They never said winning was easy. Some people can’t handle success, I can. How’s business? Boomin. Always remember in the jungle there’s a lot of they in there, after you overcome they, you will make it to paradise. Watch your back, but more importantly when you get out the shower, dry your back, it’s a cold world out there. The weather is amazing, walk with me through the pathway of more success. Take this journey with me, Lion!</p>
+                    <p>What release are we on? Whats the last beta build that was cut? What build had a certain feature? Take the guess work out of it by being able to see clearly all previous releases from your team.</p>
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-sm-6 content">
                 <h3>Know Which Team Owns Which Feature</h3>
-                    <p>They don’t want us to win. Bless up. Celebrate success right, the only way, apple. Let me be clear, you have to make it through the jungle to make it to paradise, that’s the key, Lion! You see the hedges, how I got it shaped up? It’s important to shape up your hedges, it’s like getting a haircut, stay fresh. We don’t see them, we will never see them. The weather is amazing, walk with me through the pathway of more success. Take this journey with me, Lion! Another one.</p>
+                    <p>Who owns this feature? Can someone link me to the tech spec? Which PM should I reach out to for some clarification around this new feature? The Features Owner Doc has all your answers. The Features Owner Doc is your source of truth for all teams and projects at your company. You no longer need to waste time by trying to figure out who owns which project.</p>
                 </div>
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3"></div>
