--- a/views/release.html
+++ b/views/release.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <button type="button" class="btn btn-outline-success my-2 my-sm-0" id="profile-btn">Profile</button>
+            <button type="button" class="btn my-2 my-sm-0" id="profile-btn">Profile</button>
         </div>
     </nav>
 
@@ -36,20 +36,16 @@
         <div class="container">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item first-tab">
-                    <a class="nav-link" id="pills-releases-tab" data-toggle="pill" href="#pills-releases" role="tab"
+                    <a class="nav-link active" id="pills-releases-tab" data-toggle="pill" href="#pills-releases" role="tab"
                         aria-controls="pills-release" aria-selected="true">Releases</a>
                 </li>
                 <li class="nav-item second-tab">
-                    <a class="nav-link" id="pills-features-owner-tab" data-toggle="pill" href="#pills-features-owner-doc" role="tab"
-                        aria-controls="pills-features-owner" aria-selected="false">Features Owner Doc</a>
+                    <a class="nav-link" id="pills-features-owner-tab" data-toggle="pill" href="#pills-features-owner-doc" role="tab"aria-controls="pills-features-owner" aria-selected="false">Features Owner Doc</a>
                 </li>
                 <li class="nav-item third-tab">
-                    <a class="nav-link" id="pills-calendar-tab" data-toggle="pill" href="#pills-calendar" role="tab"
-                        aria-controls="pills-calendar" aria-selected="false">Calendar</a>
+                    <a class="nav-link" id="pills-calendar-tab" data-toggle="pill" href="#pills-calendar" role="tab" aria-controls="pills-calendar" aria-selected="false">Calendar</a>
                 </li>
-                <li>
-                    <button id="release-btn" type="button" class="btn my-2 my-sm-0">Add New Release</button>
-                </li>
+                <button id="release-btn" type="button" class="btn my-2 my-sm-0">Add New Release</button>
             </ul>
         </div>
         <hr>
@@ -60,7 +56,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Current iOS Release</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn">Release Details</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -68,7 +64,6 @@
                         <div class="card-body">
                             <h5 class="card-title">Current Android Release</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn">Release Details</a>
                         </div>
                     </div>
                 </div>
@@ -77,9 +72,7 @@
     </div>
 
     <div class="box2">
-        <div id="example">
-            
-        </div>
+        <div id="example"></div>
     </div>
     <!-- BOOTSTRAP JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
