updates to index

--- a/views/index.html
+++ b/views/index.html
@@ -42,19 +42,19 @@
                         </div>
                         <div class="modal-body mx-3">
                             <div class="md-form mb-5">
-                                <input type="email" id="defaultForm-email" class="form-control">
-                                <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+                                <label data-error="wrong" data-success="right" for="defaultForm-email">Email</label>
+                                <input type="email" id="defaultForm-email" class="form-control" placeholder="name@email.com">
                             </div>
                             <div class="md-form mb-4">
-                                <input type="password" id="defaultForm-pass" class="form-control">
-                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Password</label>
+                                <input type="password" id="defaultForm-pass" class="form-control" placeholder="Password">
                             </div>
                         </div>
                         <div class="modal-footer d-flex justify-content-center">
                             <button class="btn btn-default">Login</button>
                         </div>
                         <div class="signup">
-                            <p>Don't have an account? Sign up</p>
+                            <p>Don't have an account? <a href="signup.html" class="signup-link">Sign up</a></p>
                         </div>
                     </div>
                 </div>
@@ -63,18 +63,14 @@
     </nav>
 
     <div class="box1">
-        <div class="container text-center">
+        <div class="container text-center" id="middle">
             <div class="row text-center pt-5">
-                <h2 class="col-sm-12 title">Why Release Pro?</h2>
+                <h1 class="col-sm-12 title">Why Release Pro?</h1>
             </div>
             <div class="why">
                 <p>Release Pro helps Engineering teams keep track of their releases throughout the release process. The more information a team member can see about the release, the better a release can be for your users.</p>
             </div>
             <button type="button" class="btn btn-primary mt-5 join-btn" id="signup-btn">Sign Up Now</button>
-        </div>
-        <div class="container">
-            <i class="fas fa-mobile-alt"></i>
-            <i class="fas fa-desktop"></i>
         </div>
     </div>
     <div class="box2">
