--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -16,13 +16,24 @@
     cursor: pointer;
 }
 
+.modal-body {
+    /* display: flex; */
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
 .signup {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.form-control:focus {
+.signup-link {
+    color: #796eff;
+}
+
+.md-form:focus {
     border-color: #796eff;
     box-shadow: 0 0 0 0.1rem #796eff;
 }
