adds edit release html and css

--- a/public/styles/release.css
+++ b/public/styles/release.css
@@ -8,7 +8,7 @@
 }
 
 /* -------- Navbar Styling -------- */
-#profile-btn {
+#log-out-btn {
     color: #796eff;
     background-color: none;
     border: none;
