--- a/views/release.html
+++ b/views/release.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <button type="button" class="btn my-2 my-sm-0" id="profile-btn">Profile</button>
+            <button type="button" class="btn my-2 my-sm-0" id="log-out-btn">Log out</button>
         </div>
     </nav>
 
@@ -36,14 +36,16 @@
         <div class="container">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item first-tab">
-                    <a class="nav-link active" id="pills-releases-tab" data-toggle="pill" href="#pills-releases" role="tab"
-                        aria-controls="pills-release" aria-selected="true">Releases</a>
+                    <a class="nav-link active" id="pills-releases-tab" data-toggle="pill" href="#pills-releases" role="tab" aria-controls="pills-release" aria-selected="true">Releases</a>
                 </li>
                 <li class="nav-item second-tab">
                     <a class="nav-link" id="pills-features-owner-tab" data-toggle="pill" href="#pills-features-owner-doc" role="tab"aria-controls="pills-features-owner" aria-selected="false">Features Owner Doc</a>
                 </li>
                 <li class="nav-item third-tab">
                     <a class="nav-link" id="pills-calendar-tab" data-toggle="pill" href="#pills-calendar" role="tab" aria-controls="pills-calendar" aria-selected="false">Calendar</a>
+                </li>
+                <li class="nav-item fourth-tab">
+                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-calendar" aria-selected="false">Profile</a>
                 </li>
                 <button id="release-btn" type="button" class="btn my-2 my-sm-0">Add New Release</button>
             </ul>
