adds signup logic

--- a/views/signup.html
+++ b/views/signup.html
@@ -59,7 +59,7 @@
     <div class="box1">
         <h1>Signup for Release Pro</h1>
         <div class="container">
-            <form>
+            <form id="signupForm">
                 <div class="form-group">
                     <label for="exampleInputFirstName">First Name</label>
                     <input type="name" class="form-control" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="First Name">
