--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body mx-3">
+                        <div class="modal-body mx-3" id="loginForm">
                             <div class="md-form mb-5">
                                 <label data-error="wrong" data-success="right" for="defaultForm-email">Email</label>
                                 <input type="email" id="defaultForm-email" class="form-control" placeholder="name@email.com">
