updates user controller and routes

--- a/public/styles/release.css
+++ b/public/styles/release.css
@@ -43,3 +43,7 @@
     cursor: pointer;
     margin-left: auto;
 }
+
+/* -------- Sheet Styling -------- */
+
+/* -------- Profile Styling -------- */
