--- a/views/release.html
+++ b/views/release.html
@@ -29,7 +29,7 @@
             <button type="button" class="btn my-2 my-sm-0" id="log-out-btn">Log out</button>
         </div>
     </nav>
-
+<!-- Release Page Nav -->
     <div class="box1">
         <div class="container">
             <ul class="nav nav-pills mb-4" id="pills-tab" role="tablist">
@@ -48,30 +48,64 @@
                 <button id="release-btn" type="button" class="btn my-2 my-sm-0">Add New Release</button>
             </ul>
             <hr>
+            <!-- Content for Nav Pills -->
             <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade" id="releases" role="tabpanel" aria-labelledby="releases-tab">
-                    <div class="row">
-                        <div class="col-sm-6">
+                <!-- Release Pill Content -->
+                <div class="tab-pane fade show active" id="releases" role="tabpanel" aria-labelledby="releases-tab">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div class="col mb-4">
                             <div class="card">
+                                <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Current iOS Release</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <h5 class="card-title">Current iOS Release</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col mb-4">
                             <div class="card">
+                                <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Current Android Release</h5>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <h5 class="card-title">Current Android Release</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card">
+                                <img src="..." class="card-img-top" alt="...">
+                                <div class="card-body">
+                                <h5 class="card-title">iOS Release</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card">
+                                <img src="..." class="card-img-top" alt="...">
+                                <div class="card-body">
+                                <h5 class="card-title">Android Release</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                <!-- Features Owner Doc Pill Content -->
                 <div class="tab-pane fade" id="featuresowner" role="tabpanel" aria-labelledby="featuresowner-tab">
-                    <div id="example"></div>
+                    <div id="example1" class="hot"></div>
+                </div>
+                <!-- Calendar Pill Content -->
+                <div class="tab-pane fade" id="calendar" role="tabpanel" aria-labelledby="calendar-tab">
+                    <div class="calendar">
+                        <h2>COMING SOON</h2>
+                    </div>
+                </div>
+                <!-- Profile Pill Content -->
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <div class="profile">
+                        <h2>COMING SOON</h2>
+                    </div>
                 </div>
             </div>  
         </div>
