updat4es user controllers and routes and server js

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
                             <button class="btn btn-default">Login</button>
                         </div>
                         <div class="signup">
-                            <p>Don't have an account? <a href="signup.html" class="signup-link">Sign up</a></p>
+                            <p>Don't have an account? <a href="/signup" class="signup-link">Sign up</a></p>
                         </div>
                     </div>
                 </div>
