--- a/views/release.html
+++ b/views/release.html
@@ -104,7 +104,37 @@
                 <!-- Profile Pill Content -->
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="profile">
-                        <h2>COMING SOON</h2>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+                                    <div class="profile-info">
+                                        <div class="col-sm-12">
+                                            <div class="col-xs-12 col-sm-8">
+                                                <h2>firstName lastName</h2>
+                                                <p>email slackHandle</p>
+                                                <p>role</p>
+                                                <p>Projects I work on:
+                                                    <span class="tags">project1</span> 
+                                                    <span class="tags">project2</span>
+                                                    <span class="tags">project3</span>
+                                                </p>
+                                            </div>             
+                                            <div class="col-xs-12 col-sm-4 text-center">
+                                            </div>
+                                        </div>            
+                                    </div>                 
+                                </div>
+                                <div class="col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+                                    <!-- <div class="profile-photo">
+                                        <i><img id="profile-picture" src="/public/images/Screen Shot 2020-03-10 at 8.02.24 PM.png" alt="Profile Picture" href="https://www.freepik.com/free-photos-vectors/hand"></i>
+                                    </div> -->
+                                    <div class="circle-profile"></div>
+                                    <div class="edit-profile">
+                                        <button id="edit-btn" type="button" class="btn my-2 my-sm-0">Edit Profile</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>  
