--- a/views/release.html
+++ b/views/release.html
@@ -57,8 +57,16 @@
                             <div class="card">
                                 <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
-                                <h5 class="card-title">Current iOS Release</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title" id="os">Current iOS Release</h5>
+                                    <p class="card-text" id="type">Alpha/Beta/Production</p>
+                                    <p class="card-text" id="os">iOS/Android</p>
+                                    <p class="card-text" id="version">1.1.1395</p>
+                                    <p class="card-text" id="manager">Release Manager</p>
+                                    <p class="card-text" id="experiments">Experiments</p>
+                                    <p class="card-text" id="notes">Notes</p>
+                                    <p class="card-text" id="incidents">Incidents</p>
+                                    <p class="card-text" id="postmortem">Post Mortem</p>
+                                    <button id="edit-release-btn" type="button" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
                         </div>
@@ -66,8 +74,16 @@
                             <div class="card">
                                 <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
-                                <h5 class="card-title">Current Android Release</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Current Android Release</h5>
+                                    <p class="card-text" id="type">Alpha/Beta/Production</p>
+                                    <p class="card-text" id="os">iOS/Android</p>
+                                    <p class="card-text" id="version">1.1.1395</p>
+                                    <p class="card-text" id="manager">Release Manager</p>
+                                    <p class="card-text" id="experiments">Experiments</p>
+                                    <p class="card-text" id="notes">Notes</p>
+                                    <p class="card-text" id="incidents">Incidents</p>
+                                    <p class="card-text" id="postmortem">Post Mortem</p>
+                                    <button id="edit-release-btn" type="button" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
                         </div>
@@ -75,8 +91,16 @@
                             <div class="card">
                                 <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
-                                <h5 class="card-title">iOS Release</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h5 class="card-title">iOS Release</h5>
+                                    <p class="card-text" id="type"></p>
+                                    <p class="card-text" id="os"></p>
+                                    <p class="card-text" id="version"></p>
+                                    <p class="card-text" id="manager"></p>
+                                    <p class="card-text" id="experiments"></p>
+                                    <p class="card-text" id="notes"></p>
+                                    <p class="card-text" id="incidents"></p>
+                                    <p class="card-text" id="postmortem"></p>
+                                    <button id="edit-release-btn" type="button" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
                         </div>
@@ -84,8 +108,16 @@
                             <div class="card">
                                 <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
-                                <h5 class="card-title">Android Release</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Android Release</h5>
+                                    <p class="card-text" id="type"></p>
+                                    <p class="card-text" id="os"></p>
+                                    <p class="card-text" id="version"></p>
+                                    <p class="card-text" id="manager"></p>
+                                    <p class="card-text" id="experiments"></p>
+                                    <p class="card-text" id="notes"></p>
+                                    <p class="card-text" id="incidents"></p>
+                                    <p class="card-text" id="postmortem"></p>
+                                    <button id="edit-release-btn" type="button" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
                         </div>
@@ -110,13 +142,11 @@
                                     <div class="profile-info">
                                         <div class="col-sm-12">
                                             <div class="col-xs-12 col-sm-8">
-                                                <h2>firstName lastName</h2>
-                                                <p>email slackHandle</p>
-                                                <p>role</p>
+                                                <h2 id="name">firstName lastName</h2>
+                                                <p id="email">email</p><p id="slack">slackHandle</p>
+                                                <p id="role">role</p>
                                                 <p>Projects I work on:
-                                                    <span class="tags">project1</span> 
-                                                    <span class="tags">project2</span>
-                                                    <span class="tags">project3</span>
+                                                    <span id="projects">project</span> 
                                                 </p>
                                             </div>             
                                             <div class="col-xs-12 col-sm-4 text-center">
@@ -124,11 +154,8 @@
                                         </div>            
                                     </div>                 
                                 </div>
-                                <div class="col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-                                    <!-- <div class="profile-photo">
-                                        <i><img id="profile-picture" src="/public/images/Screen Shot 2020-03-10 at 8.02.24 PM.png" alt="Profile Picture" href="https://www.freepik.com/free-photos-vectors/hand"></i>
-                                    </div> -->
-                                    <div class="circle-profile"></div>
+                                <div class="col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 col-centered">
+                                    <div class="circle-profile" href="https://www.freepik.com/free-photos-vectors/hand"></div>
                                     <div class="edit-profile">
                                         <button id="edit-btn" type="button" class="btn my-2 my-sm-0">Edit Profile</button>
                                     </div>
