--- a/views/release.html
+++ b/views/release.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <button type="button" class="btn my-2 my-sm-0" id="log-out-btn">Log out</button>
+            <button type="button" class="btn my-2 my-sm-0" id="logout">Log out</button>
         </div>
     </nav>
 <!-- Release Page Nav -->
@@ -130,7 +130,7 @@
                 <!-- Calendar Pill Content -->
                 <div class="tab-pane fade" id="calendar" role="tabpanel" aria-labelledby="calendar-tab">
                     <div class="calendar">
-                        <h2>COMING SOON</h2>
+                        <h2 class="stroke">COMING SOON</h2>
                     </div>
                 </div>
                 <!-- Profile Pill Content -->
