finishes refactoring of views and updates all paths in html

--- a/views/release.html
+++ b/views/release.html
@@ -8,7 +8,7 @@
     <!-- HANDSONTABLE CSS -->
     <link href="https://cdn.jsdelivr.net/npm/handsontable@7.4.2/dist/handsontable.full.min.css" rel="stylesheet" media="screen">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="../public/styles/release.css">
+    <link rel="stylesheet" href="./styles/release.css">
     
     
     <title>Release Pro: Release</title>
@@ -176,6 +176,6 @@
     <!-- HANDSONTABLE JS -->
     <script src="https://cdn.jsdelivr.net/npm/handsontable@7.4.2/dist/handsontable.full.min.js"></script>
     <!-- CUSTOM JS -->
-    <script src="../public/scripts/release.js"></script>
+    <script src="./scripts/release.js"></script>
 </body>
 </html>
