--- a/views/addrelease.html
+++ b/views/addrelease.html
@@ -6,9 +6,9 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="../public/styles/addrelease.css">
+    <link rel="stylesheet" href="./styles/addrelease.css">
     <!-- CUSTOM JS -->
-    <script defer src="../public/scripts/addrelease.js"></script>
+    <script defer src="./scripts/addrelease.js"></script>
     <title>Release Pro: Add New Release</title>
 </head>
 <body>
