--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -6,9 +6,9 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="../public/styles/editprofile.css">
+    <link rel="stylesheet" href=".styles/editprofile.css">
     <!-- CUSTOM JS -->
-    <script defer src="../public/scripts/editprofile.js"></script>
+    <script defer src=".scripts/editprofile.js"></script>
     <title>Release Pro: Edit Profile</title>
 </head>
 <body>
